Add logging to facade layer