@@ -1,5 +1,6 @@
 package ua.nure.todo.facade.category.impl;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import ua.nure.todo.entity.Category;
 import ua.nure.todo.exception.EntityNotFoundException;
@@ -9,8 +10,8 @@ import ua.nure.todo.web.dto.request.category.CategoryRequestDto;
 import ua.nure.todo.web.dto.response.category.CategoryResponseDto;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 public class CategoryFacadeImpl implements CategoryFacade {
 
@@ -22,56 +23,78 @@ public class CategoryFacadeImpl implements CategoryFacade {
 
     @Override
     public CategoryResponseDto create(CategoryRequestDto categoryRequestDto) {
+        log.info("Method create() was started with categoryRequestDto: {}", categoryRequestDto);
         Category category = new Category();
         category.setTitle(categoryRequestDto.getTitle());
         category.setCompletedCount(categoryRequestDto.getCompletedCount());
         category.setUncompletedCount(categoryRequestDto.getUncompletedCount());
         categoryService.create(category);
-        return new CategoryResponseDto(category);
+        CategoryResponseDto responseDto = new CategoryResponseDto(category);
+        log.info("Method create() was finished with categoryResponseDto: {}", responseDto);
+        return responseDto;
     }
 
     @Override
     public CategoryResponseDto update(CategoryRequestDto categoryRequestDto, Long id) {
+        log.info("Method update() by id = {} was started with categoryRequestDto: {}", id, categoryRequestDto);
         if (categoryService.findById(id).isPresent()) {
             Category category = categoryService.findById(id).get();
             category.setTitle(categoryRequestDto.getTitle());
             category.setCompletedCount(categoryRequestDto.getCompletedCount());
             category.setUncompletedCount(categoryRequestDto.getUncompletedCount());
             categoryService.create(category);
-            return new CategoryResponseDto(category);
+            CategoryResponseDto responseDto = new CategoryResponseDto(category);
+            log.info("Method update() was finished with categoryResponseDto: {}", responseDto);
+            return responseDto;
         }
+        log.error("Category with id = {} not found", id);
         throw new EntityNotFoundException("Category not found");
     }
 
     @Override
     public void delete(Long id) {
+        log.info("Method delete() by id = {} was started", id);
         categoryService.delete(id);
+        log.info("Method delete() by id = {} was finished", id);
     }
 
     @Override
     public CategoryResponseDto findById(Long id) {
+        log.info("Method findById() by id = {} was started", id);
         if (categoryService.findById(id).isPresent()) {
             Category category = categoryService.findById(id).get();
-            return new CategoryResponseDto(category);
+            CategoryResponseDto responseDto = new CategoryResponseDto(category);
+            log.info("Method findById() was finished with categoryResponseDto: {}", responseDto);
+            return responseDto;
         }
+        log.error("Category with id = {} not found", id);
         throw new EntityNotFoundException("Category not found");
     }
 
     @Override
     public List<CategoryResponseDto> findAll() {
+        log.info("Method findAll() was started");
         List<Category> all = categoryService.findAll();
-        return all.stream().map(CategoryResponseDto::new).collect(Collectors.toList());
+        List<CategoryResponseDto> responses = all.stream().map(CategoryResponseDto::new).toList();
+        log.info("Method findAll() was finished with number of responses: {}", responses.size());
+        return responses;
     }
 
     @Override
     public List<CategoryResponseDto> findByTitle(String text) {
+        log.info("Method findByTitle() by title = {} was started", text);
         List<Category> all = categoryService.findByTitle(text);
-        return all.stream().map(CategoryResponseDto::new).collect(Collectors.toList());
+        List<CategoryResponseDto> responses = all.stream().map(CategoryResponseDto::new).toList();
+        log.info("Method findByTitle() was finished with number of responses: {}", responses.size());
+        return responses;
     }
 
     @Override
     public List<CategoryResponseDto> findAllByOrderByTitleAsc() {
+        log.info("Method findAllByOrderByTitleAsc() was started");
         List<Category> all = categoryService.findAllByOrderByTitleAsc();
-        return all.stream().map(CategoryResponseDto::new).collect(Collectors.toList());
+        List<CategoryResponseDto> responses = all.stream().map(CategoryResponseDto::new).toList();
+        log.info("Method findAllByOrderByTitleAsc() was finished with number of responses: {}", responses.size());
+        return responses;
     }
 }
